--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     background-color: pink;
     width:670px;
     height:30px;
+    border-radius:4px;
 }
 
 
@@ -33,19 +34,28 @@
     height:30px;
     width:50px;
     text-align:center;
+    border-radius:4px;
+    border-top-left-radius:4px;
+    border-bottom-left-radius:4px;
+    border:none;
 }
 
 .search-input{
     height:30px;
     width:600px;
+    font-size:1rem;
+    border:none;
+    border-radius:4px;
 }
 
 .nav-search-icon{
     width:30px;
     height:30px;
     display:flex;
+    justify-content:center;
     align-items:center;
     background-color: orange;
+    border-radius:4px;
 }
 
 .nav-lang{
@@ -89,6 +99,20 @@
     font-size:15px;
     font-weight:700;
     text-align:right;
+}
+
+.templet img{
+    width:100%;
+    justify-content: space-evenly;
+    align-items:center;
+}
+
+.images {
+    justify-content: space-evenly; 
+}
+
+.images img {
+    margin: 0 30px; 
 }
 
 .shop{
